force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <description>A record that does not indicate an expense incurred or income received but which facilitates a balance transfer from one account to another.</description>
    <label>Transfer</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>