force-app/main/default/objects/Transfer__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM Withdrawal</fullName>
            </value>
            <value>
                <fullName>Online Transfer</fullName>
            </value>
            <value>
                <fullName>Venmo Transfer</fullName>
            </value>
            <value>
                <fullName>Card Payoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>