force-app/main/default/objects/Transfer__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Transfers</relationshipLabel>
    <relationshipName>Outbound_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>