force-app/main/default/objects/Transfer__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Transfers</relationshipLabel>
    <relationshipName>Inbound_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>