force-app/main/default/objects/Transfer__c/recordTypes/Card_Payoff.recordType-meta.xml
<RecordType>
    <fullName>Card_Payoff</fullName>
    <active>true</active>
    <description>A payment of a credit card to reduce both the card&apos;s balance and the target account&apos;s.</description>
    <label>Card Payoff</label>
</RecordType>