force-app/main/default/objects/Transfer__c/recordTypes/Lateral_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Lateral_Transfer</fullName>
    <active>true</active>
    <description>A lateral transfer from one balance to another; no credit card involved.</description>
    <label>Lateral Transfer</label>
</RecordType>