force-app/main/default/objects/Transfer__c/validationRules/Card_Payoff_Must_Reference_Card_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_Payoff_Must_Reference_Card_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Method__c, &apos;Card Payoff&apos;),
  OR(
    AND(
      Source_Account__r.RecordType.DeveloperName = &apos;Credit_Card&apos;,
      Target_Account__r.RecordType.DeveloperName = &apos;Credit_Card&apos;
    ),
    AND(
      Source_Account__r.RecordType.DeveloperName = &apos;General_Equity&apos;,
      Target_Account__r.RecordType.DeveloperName = &apos;General_Equity&apos;
    )
  )
)</errorConditionFormula>
    <errorMessage>You must select one equity account and one card account for a card payoff transfer.</errorMessage>
</ValidationRule>