force-app/main/default/objects/Transfer__c/listViews/Card_Payoffs.listView-meta.xml
<ListView>
    <fullName>Card_Payoffs</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Target_Account__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transfer__c.Card_Payoff</value>
    </filters>
    <label>Card Payoffs</label>
</ListView>